# simple_matching_engine

./: .travis.yml  CMakeLists.txt  build.sh  license.md  readme.md
scripts/: exchange_fuzzer.sh
source/: CMakeLists.txt  Order.cpp  Order.h  OrderBook.cpp  OrderBook.h  main.cpp
source/unittest/: CMakeLists.txt
test/: CMakeLists.txt
